--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,13 @@
 <html>
 
 <head>
+    <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1">
     <title>Trip</title>
 </head>
 
 <body>
     <div id="root"></div>
 </body>
+
 </html>
